添加单元测试

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,8 @@
         "strstream": "cpp",
         "future": "cpp",
         "shared_mutex": "cpp",
-        "cfenv": "cpp"
+        "cfenv": "cpp",
+        "*.inc": "cpp",
+        "*.txx": "cpp"
     }
 }
