--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   kafka:
     container_name: kafka
@@ -21,6 +21,10 @@ services:
       KAFKA_METADATA_LOG_DIRS: /var/lib/kafka/meta
       # 主题副本因子
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      # 设置 Broker 最大消息大小 2MB
+      KAFKA_MESSAGE_MAX_BYTES: 10485760
+      # 设置日志保留时间 7天
+      KAFKA_LOG_RETENTION_MS: 604800000
     volumes:
       - kafka-data:/var/lib/kafka/data
       - kafka-meta:/var/lib/kafka/meta
@@ -34,7 +38,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      DYNAMIC_CONFIG_ENABLED: 'true'
+      DYNAMIC_CONFIG_ENABLED: "true"
     # volumes:
     #   - ./kui.yaml:/etc/kafkaui/dynamic_config.yaml:rw
 
@@ -65,7 +69,7 @@ services:
       nofile:
         soft: 65536
         hard: 65536
-    cap_add: 
+    cap_add:
       - IPC_LOCK
     volumes:
       - es-data-volume:/usr/share/elasticsearch/data
@@ -84,7 +88,7 @@ services:
     depends_on:
       - elasticsearch
 
-volumes: 
+volumes:
   es-data-volume:
     driver: local
   kafka-data:
