--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,16 +1,26 @@
 
 find_package(GTest CONFIG REQUIRED)
-find_package(OpenCV REQUIRED)
 
-add_executable(test_message ${CMAKE_SOURCE_DIR}/tests/test_message.cpp)
-target_link_libraries(test_message 
-    PRIVATE GTest::gtest_main 
-    PRIVATE eventpp::eventpp 
-    PRIVATE nlohmann_json::nlohmann_json 
-    PRIVATE RdKafka::rdkafka 
-    PRIVATE RdKafka::rdkafka++ 
-    PRIVATE opencv_core 
-    PRIVATE opencv_imgproc 
-    PRIVATE opencv_highgui
+
+set(TEST_LIBS
+    GTest::gtest_main
+    eventpp::eventpp
+    nlohmann_json::nlohmann_json
+    RdKafka::rdkafka
+    RdKafka::rdkafka++
+    opencv_core
+    opencv_imgproc
+    opencv_highgui
+    aklomp::base64
 )
-add_test(NAME test_message COMMAND test_message)
+
+add_executable(test_event ${CMAKE_SOURCE_DIR}/tests/test_event.cpp ${SRCS})
+target_link_libraries(test_event PRIVATE ${TEST_LIBS})
+
+
+add_executable(test_publisher ${CMAKE_SOURCE_DIR}/tests/test_publisher.cpp ${SRCS})
+target_link_libraries(test_publisher PRIVATE ${TEST_LIBS})
+
+
+add_test(NAME test_event COMMAND test_event)
+add_test(NAME test_publisher COMMAND test_publisher)
