--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,14 +4,13 @@ find_package(GTest CONFIG REQUIRED)
 
 set(TEST_LIBS
     GTest::gtest_main
-    eventpp::eventpp
     nlohmann_json::nlohmann_json
     RdKafka::rdkafka
     RdKafka::rdkafka++
     opencv_core
     opencv_imgproc
     opencv_highgui
-    aklomp::base64
+    ${Boost_LIBRARIES}
 )
 
 add_executable(test_event ${CMAKE_SOURCE_DIR}/tests/test_event.cpp ${SRCS})
