--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,6 @@
         "*.txx": "cpp",
         "coroutine": "cpp",
         "source_location": "cpp"
-    }
+    },
+    "C_Cpp.clang_format_sortIncludes": true
 }
